# axis

./: .gitignore  CMakeLists.txt  README  TASKS.md  platformio.ini  sdkconfig.defaults
docs/: api.md  architecture.md  calibration.md  development.md  hardware_setup.md  protocol.md
main/: CMakeLists.txt  command_interpreter.c  command_interpreter.h  data_logger.c  data_logger.h  diagnostics.c  diagnostics.h  eeg_reader.c  eeg_reader.h  gesture_player.c  gesture_player.h  led_status.c  led_status.h  main.c  motion_planner.c  motion_planner.h  nvs_config.c  nvs_config.h  safety_monitor.c  safety_monitor.h  serial_cli.c  serial_cli.h  servo_controller.c  servo_controller.h  signal_processor.c  signal_processor.h  tgam_protocol.c  tgam_protocol.h  version.h  wifi_control.c  wifi_control.h
tools/: analyze.py  analyze_server.py  simulate_axis.py  simulate_dashboard.py  simulate_eeg.py
