idf_component_register(
    SRCS
        main.c
        tgam_protocol.c
        eeg_reader.c
        servo_controller.c
        command_interpreter.c
        nvs_config.c
        motion_planner.c
        gesture_player.c
        safety_monitor.c
        data_logger.c
        serial_cli.c
        wifi_control.c
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_event
        esp_http_server
        sdmmc
        fatfs
        driver
)
